objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Effort_Hours__c</fullName>
        <label>Actual Effort (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bluewave_Assignee_Email__c</fullName>
        <inlineHelpText>Used for Email Notifications</inlineHelpText>
        <label>Bluewave Assignee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bluewave_Assignee__c</fullName>
        <label>Bluewave Assignee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bluewave_Assignee</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Child Items</relationshipLabel>
        <relationshipName>ChildItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort_Hours__c</fullName>
        <inlineHelpText>Number of hours estimated to complete this task.</inlineHelpText>
        <label>Estimated Effort (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <referenceTo>Phase__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Mailbox__c</fullName>
        <label>Project Mailbox</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salesforce_Record_Link__c</fullName>
        <label>Salesforce Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Awaiting Customer</fullName>
                </value>
                <value>
                    <fullName>Awaiting Bluewave</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Items_by_Owner_Kanban</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Items by Owner (Kanban)</label>
    </listViews>
    <listViews>
        <fullName>Items_by_Priority_Kanban</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Items by Priority (Kanban)</label>
    </listViews>
    <listViews>
        <fullName>Items_by_Status_Classification</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Items by Classification (Kanban)</label>
    </listViews>
    <listViews>
        <fullName>Items_by_Status_Kanban</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Classification__c</columns>
        <columns>Phase__c</columns>
        <columns>Priority__c</columns>
        <columns>Stage__c</columns>
        <columns>Bluewave_Assignee__c</columns>
        <columns>Estimated_Effort_Hours__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Items by Status (Kanban)</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bluewave_Assignee_Email_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(TEXT(Bluewave_Assignee__c))),
ISBLANK(Bluewave_Assignee_Email__c)
)</errorConditionFormula>
        <errorDisplayField>Bluewave_Assignee_Email__c</errorDisplayField>
        <errorMessage>Please provide an email address for the Bluewave Assignee selected. This is required for notification purposes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bluewave_Assignee_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Status__c, 'New')),
NOT(ISPICKVAL(Status__c, 'Closed')),
ISBLANK(TEXT(Bluewave_Assignee__c))
)</errorConditionFormula>
        <errorMessage>A Bluewave Assignee must be identified.</errorMessage>
    </validationRules>
</CustomObject>